# analog-economy

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  SECURITY.md  claude.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: governance-ci.yml
.governance/: mock-tax-baseline.json  type-safety-baseline.json
core-governance/: .dockerignore  Dockerfile  requirements.txt
core-governance/app/: main.py
core-governance/gaian/: __init__.py  config.py  config.yaml  main.py
core-governance/gaian/biomes/: __init__.py  base_biome.py  uprising.py
core-governance/gaian/core/: __init__.py  anti_cheat.py  data_gate.py  era_manager.py  ethics_filter.py  living_future.py  novelty_scorer.py  policy_engine.py
core-governance/gaian/exports/: __init__.py  buyer_packages.py
core-governance/gaian/models/: __init__.py  action.py
core-governance/gaian/observability/: __init__.py  middleware.py  structlog_setup.py
core-governance/gaian/routes/: __init__.py  action.py  health.py
core-governance/tests/: __init__.py  conftest.py
core-governance/tests/unit/: test_placeholder.py  test_spike_0.py
development/: phase-1-golden-spike.md
docs/: mault.yaml  story-index.md
docs/guides/: MAULT-AI-CODER-GUIDE.md  README.md
docs/guides/architecture/: SCHEMA-VALIDATION.md  STRUCTURAL-GOVERNANCE.md  SUPPLY-CHAIN-SECURITY.md  directory-structure.md
docs/guides/concepts/: project-overview.md
docs/guides/development/: CICD.md  TDD-GUIDE.md
docs/guides/outside research/: AI Training Data Game Design.txt
docs/guides/project setup/: CICD-DRAFT.md  CONTAINERIZATION.md  ENVIRONMENT.md  GIT-SETUP.md  GOV-TESTING-DRAFT.md  GOV-TESTING.md  IRON-DOME-DRAFT.md  IRON-DOME.md  OBSERVABILITY-DRAFT.md  OBSERVABILITY.md  PRECOMMIT-SETUP-DRAFT.md  PRECOMMIT-SETUP.md  PRODUCTION-READINESS-KIT-README-DRAFT.md  RATCHET-STRATEGY-DRAFT.md  RISING-TIDE-DRAFT.md  SCHEMA-VALIDATION-DRAFT.md  STRUCTURAL-GOVERNANCE-DRAFT.md  SUPPLY-CHAIN-SECURITY-DRAFT.md  TDD-GUIDE-DRAFT.md  guardrails.yml
docs/specs/: ancient-era-events.md  ancient-innovations.md  animal-husbandry.md  art-direction.md  ascension-karma.md  asset-protection-karma.md  blockchain-economy.md  character-creation.md  combat-conflict.md  constraints.md  daily-life-simulation.md  director-ai.md  entertainment-leisure.md  eridu-setting.md  fishing-sailing.md  food-production.md  governance-system.md  historical-progression.md  housing-building.md  inventory-system.md  knowledge-consolidation.md  legacy-system.md  legal-justice.md  medicine-healing.md  merchant-trade.md  multiplayer-architecture.md  mvp-training-facility.md  npc-behavior.md  payments.md  player-engagement.md  pottery-ceramics.md  professions-economy.md  quest-framework.md  scribe-administration.md  skills-abilities.md  survival-and-progression.md  temple-religion.md  textile-production.md  the-codex.md  training-data-architecture.md  (+3 more)
ops-infra/docker/: governance.Dockerfile
scripts/governance/node/: check_supply_chain.js
scripts/governance/python/: __init__.py  check_iron_dome.py  check_mock_conformance.py  check_mock_tax.py  check_srp_size.py  validate_config.py
shared/constants/: biome_ids.py
shared/schemas/: telemetry.py  telemetry.ts
