# =============================================================================
# The Analog Economy - Root Project Configuration
# =============================================================================
# This file configures Python tooling for the entire monorepo.
# Individual packages may have their own pyproject.toml for specific settings.
# =============================================================================

[project]
name = "analog-economy"
version = "0.1.0"
description = "A survival simulation game that generates high-quality AI training data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Analog Economy Team" }
]
keywords = ["game", "ai", "training-data", "simulation", "survival"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# =============================================================================
# Tool Configurations
# =============================================================================

# -----------------------------------------------------------------------------
# Black - Code Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# -----------------------------------------------------------------------------
# isort - Import Sorter
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["gaian"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]  # Allow assert and unused args in tests
"__init__.py" = ["F401"]        # Allow unused imports in __init__
"core-governance/gaian/biomes/*.py" = ["ARG002"]  # Interface methods may have unused args
"core-governance/gaian/core/*.py" = ["ARG002"]    # Interface methods may have unused args

# -----------------------------------------------------------------------------
# mypy - Static Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradual typing - enable later
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = true

# Legacy files with pre-existing type issues (fix in dedicated PR)
[[tool.mypy.overrides]]
module = [
    "gaian.biomes.base_biome",
    "gaian.core.novelty_scorer",
    "gaian.core.ethics_filter",
    "gaian.core.data_gate",
    "gaian.core.anti_cheat",
    "gaian.core.policy_engine",
    "gaian.routes.action",
]
ignore_errors = true
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# pytest - Testing Framework
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["core-governance/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# -----------------------------------------------------------------------------
# coverage - Code Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["core-governance/gaian"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

# -----------------------------------------------------------------------------
# Pydantic - Data Validation (mypy plugin settings)
# -----------------------------------------------------------------------------
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
