# =============================================================================
# The Analog Economy - Root Project Configuration
# =============================================================================
# This file configures Python tooling for the entire monorepo.
# Individual packages may have their own pyproject.toml for specific settings.
# =============================================================================

[project]
name = "analog-economy"
version = "0.1.0"
description = "A survival simulation game that generates high-quality AI training data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Analog Economy Team" }
]
keywords = ["game", "ai", "training-data", "simulation", "survival"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# =============================================================================
# Tool Configurations
# =============================================================================

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter & Formatter
# -----------------------------------------------------------------------------
# Ruff replaces: black, isort, flake8, and parts of pylint
# See: https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    # "I",    # isort - DISABLED: standalone isort hook handles this to avoid conflicts
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by ruff-format)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]  # Allow assert and unused args in tests
"__init__.py" = ["F401"]        # Allow unused imports in __init__
"core-governance/gaian/biomes/*.py" = ["ARG002"]  # Interface methods may have unused args
"core-governance/gaian/core/*.py" = ["ARG002"]    # Interface methods - keep F841 enabled for bug detection
"core-governance/gaian/exports/*.py" = ["ARG002"]  # Interface methods may have unused args

# -----------------------------------------------------------------------------
# mypy - Static Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true  # Iron Dome - keep strict
warn_unused_ignores = true
disallow_untyped_defs = false  # Enable gradually as code matures
disallow_any_generics = false
no_implicit_optional = true
check_untyped_defs = false  # Disabled until legacy code has type annotations
# Legacy code exempt from strict type checking
exclude = [
    "core-governance/gaian/core/novelty_scorer.py",
    "core-governance/gaian/core/ethics_filter.py",
    "core-governance/gaian/core/anti_cheat.py",
    "core-governance/gaian/core/policy_engine.py",
    "core-governance/gaian/core/era_manager.py",
    "core-governance/gaian/routes/action.py",
    "core-governance/gaian/biomes/base_biome.py",
]
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# pytest - Testing Framework
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["core-governance/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# -----------------------------------------------------------------------------
# coverage - Code Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["core-governance/gaian"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

# -----------------------------------------------------------------------------
# Pydantic - Data Validation (mypy plugin settings)
# -----------------------------------------------------------------------------
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# -----------------------------------------------------------------------------
# mutmut - Mutation Testing
# -----------------------------------------------------------------------------
# Verifies test quality, not just coverage. If a mutation survives,
# the tests are not catching bugs that could be introduced.
[tool.mutmut]
paths_to_mutate = "core-governance/gaian/core/"  # Only mutate the Hexagon (Pure Core)
runner = "pytest"
tests_dir = "core-governance/tests/"
dict_synonyms = ["Enum", "NamedTuple"]

# -----------------------------------------------------------------------------
# pytest-split - CI Sharding for Parallel Testing
# -----------------------------------------------------------------------------
# Enables splitting tests across multiple CI runners for faster feedback.
# Usage in CI: pytest --splits 4 --group ${{ matrix.group }}
[tool.pytest-split]
# Automatically calculated based on test duration
